--- a/package.json
+++ b/package.json
@@ -57,5 +57,5 @@
     "@types/react-router-dom": "^5.3.2",
     "@types/styled-components": "^5.1.18"
   },
-  "homepage": "https://dobbyyo.github.io/Movie-WebSite-ReactJs"
+  "homepage": "https://dobbyyo.github.io/coinweb-reactjs"
 }
